third_party/move/move-compiler-v2/tests/checking/receiver/calls_index_errors.exp

Diagnostics:
error: undeclared receiver function `merge_non_receiver` for type `W`
   ┌─ tests/checking/receiver/calls_index_errors.move:22:9
   │
22 │         S[account].t.w.merge_non_receiver(w)
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the function takes `&mut` but `&` was provided
   ┌─ tests/checking/receiver/calls_index_errors.move:26:9
   │
26 │         (&S[account].t.w).merge(w)
   │         ^^^^^^^^^^^^^^^^^

error: the function takes `&mut` but `&` was provided
   ┌─ tests/checking/receiver/calls_index_errors.move:30:9
   │
30 │         (&v[0].t.w).merge(w)
   │         ^^^^^^^^^^^
